-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.5.0 Beta
-
None
-
Windows 8.1, VS2013, 64bit
-
: 9d85490ea2171f1fbad1e6a264db835fc0e9a702 (qtbase/5.5, 15.5.2015, 5.5)
boxes example does not build, shows 56 linker errors.
Tested with Qt 5.5.0 beta candidate: qt-enterprise-windows-x86-msvc2013_64-5.5.0-beta_2015-05-13_15-52-31-59.exe
For Gerrit Dashboard: QTBUG-46103 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
112363,2 | Fix exclusion for legacy Open GL examples. | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |
112474,3 | Make OpenGL legacy examples hellogl and overpainting work with Dynamic GL. | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |