examples/opengl/legacy/shared/qtlogo.h
@@ -1,2 +1,3 @@
 DECL|macro|QTLOGO_H
 DECL|variable|Patch
+DECL|variable|QOpenGLFunctions_1_1
